--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 *.log
 *.pyc
 *.swp
+*.bak
 .DS_Store
 .atom/
 .buildlog/
@@ -29,6 +30,7 @@
 .pub-cache/
 .pub/
 build/
+pubspec.lock
 
 # Android related
 **/android/**/gradle-wrapper.jar
