--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: esc_pos_utils
 description: Basic Flutter/Dart classes for ESC/POS printing. Ticket class generates ESC/POS commands that can be sent to a thermal printer.
-version: 1.1.0
+version: 2.0.0
 homepage: https://github.com/andrey-ushakov/esc_pos_utils
 
 environment:
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   hex: ^0.2.0
-  gbk_codec: ^0.4.0
+  gbk_codec_nohtml: ^1.0.0
   image: ^3.0.2
 
 dev_dependencies:
